✨ feat(back|tournaments): add tournament status update functionality and event management enhancements